2020-03-07  7.0.10-1 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-1, GIT revision 17...

2020-03-07  7.0.10-1 Cristy  <quetzlzacatenango@image...>
  * Do not throw exception on empty draw path (reference
    https://github.com/ImageMagick/ImageMagick/issues/974).
  * Fix possible buffer overflow in ComplexImages().
  * SVG to MVG requires transforms to appear before clipping paths (reference
    https://github.com/ImageMagick/ImageMagick/issues/1860).

2020-03-06  7.0.10-0 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-0, GIT revision 17026:fd430ac9a:20200307

2020-03-01  7.0.10-0 Cristy  <quetzlzacatenango@image...>
  * Label text no longer gets cut-off (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37621).
  * Prevent heap overflow (reference
     https://github.com/ImageMagick/ImageMagick/issues/1857).

2020-02-29  7.0.9-27 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-27, GIT revision 17006:49d81b672:20200229

2020-02-24  7.0.9-27 Cristy  <quetzlzacatenango@image...>
  * Make sure we can grok this Fx expression: 1- -2.
  * Do not advance when substituting a NULL string.
  * Correct alpha for named colors in the Q32 non-HDRI build.
  * Write Group4 compressed image as a single strip.

2020-02-23  7.0.9-26 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-26, GIT revision 16972:49f1e4de2:20200223

2020-02-22  7.0.9-26 Cristy  <quetzlzacatenango@image...>
  * No percent sign in lab() color.
  * Introducing the -color-threshold command-line option.
  * Handle out of range HDRI values for -statistic option (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37589).
  * Fix improper casting when computing image signature (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37594).

2020-02-21  7.0.9-25 Cristy  <quetzlzacatenango@image...>